added a triple fault

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@
 cmake_minimum_required(VERSION 3.5)
 
 # project settings
-project(misraos VERSION 0 LANGUAGES C ASM)
+project(misraos VERSION 0 LANGUAGES C CXX)
 
 # add kernel
 add_subdirectory(kernel)
