wasn't able to fix fault

--- a/kernel/CMakeLists.txt
+++ b/kernel/CMakeLists.txt
@@ -5,7 +5,7 @@
 # set sources
 set(KERNEL_SRCS "KernelEntry.cpp" "Renderer/Framebuffer.cpp" "Renderer/FontRenderer.cpp" "Renderer/Font.cpp" "String.cpp"
     "GDT.cpp" "Utils/Bitmap.cpp" "Bootloader/Util.cpp" "Print.cpp"
-    "MemoryManager.cpp")
+    "PhysicalMemoryManager.cpp" "VirtualMemoryManager.cpp")
 
 # make kernel as executable
 add_executable(kernel ${KERNEL_SRCS})
