working on parsing system descriptor tables

--- a/kernel/CMakeLists.txt
+++ b/kernel/CMakeLists.txt
@@ -6,7 +6,7 @@
 set(KERNEL_SRCS "KernelEntry.cpp" "Renderer/Framebuffer.cpp" "Renderer/FontRenderer.cpp" "Renderer/Font.cpp"
     "GDT.cpp" "Utils/Bitmap.cpp" "Bootloader/Util.cpp" "IDT.cpp" "Interrupts.cpp" "Utils/String.cpp"
     "PhysicalMemoryManager.cpp" "VirtualMemoryManager.cpp" "Printf.cpp" "Bootloader/Entry.cpp" "Bootloader/BootInfo.cpp"
-    "Panic.cpp" "IO.cpp" "Puts.cpp" "Keyboard.cpp")
+    "Panic.cpp" "IO.cpp" "Puts.cpp" "Keyboard.cpp" "ACPI.cpp")
 
 # make kernel as executable
 add_executable(kernel ${KERNEL_SRCS})
